Stop tab jumping when hovering bottom border

--- a/app/src/sass/modules/_forms.scss
+++ b/app/src/sass/modules/_forms.scss
@@ -104,7 +104,6 @@ fieldset.checkbox {
         &:hover {
             color: #444;
             background-color: #FFF !important;
-            border-bottom: 0;
         }
 
         @media (max-width: 767px) {
